fixed intro text alignment & MAJ

--- a/home.css
+++ b/home.css
@@ -58,7 +58,7 @@
     font-size: 2rem;
 }
 .info p {
-    text-align: center;
+    text-align: justify;
     margin: 0 2rem;
     margin-top: 1rem;
 }
@@ -75,6 +75,9 @@
         height:15rem;
         width: 12rem;
     }
+    .info p {
+        text-align: center;
+        margin: 0 4rem;
     }
 body{
     padding: 0; 
